if the library is not available